Updated CreateUser and RegisterUser classes.